src/components/DropdownMenu/DropdownMenu.module.scss
// Styling for the dropdown content

.root {
  position: relative;
}
.content {
  position: absolute;
  background-color: var(--color-gray-1);
  color: var(--color-gray-12);
  z-index: 1;
  border-radius: var(--radius-4);
  border: 1px solid var(--color-gray-a6);
  box-shadow: var(--shadow-theme);
  min-width: 200px;
}

.content[data-placement='bottom'] {
  top: calc(100% + 8px);
}

.content[data-placement='top'] {
  bottom: calc(100% + 8px);
}

.content[data-placement='left'] {
  right: calc(100% + 8px);
  top: 0;
}
.content[data-placement='right'] {
  top: 0;
  left: calc(100% + 8px);
}

.item {
  margin: var(--space-1);
  border-radius: var(--radius-4);
  padding: var(--space-2);
  cursor: pointer;
  display: flex;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: var(--font-size-3);
  box-sizing: border-box;
  height: var(--component-height-medium);
  justify-content: space-between;
  align-items: center;
  gap: var(--space-4);
  transition: background-color 0.3s ease;
  color: var(--color-gray-12);

  &:hover {
    background-color: var(--color-accent-a5);
  }
}
.sub {
  position: relative;
}

.subTrigger {
  margin: var(--space-1);
  border-radius: var(--radius-4);
  padding: var(--space-2);
  box-sizing: border-box;
  height: var(--component-height-medium);
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  font-size: var(--font-size-3);
  align-items: center;
  transition: background-color 0.3s ease;
  color: var(--color-gray-12);

  &:hover {
    // color: var(--color-accent-9-contrast);
    background-color: var(--color-accent-a5);
  }
}

.subContent {
  position: absolute;
  border: 1px solid var(--color-gray-a6);
  left: calc(100% + var(--space-2));
  top: calc(var(--space-1) * -1);
  box-shadow: var(--shadow-theme);
  background-color: var(--color-gray-1);
  z-index: 1;
  border-radius: var(--radius-4);
  min-width: 200px;

  opacity: 0;
  &.open {
    opacity: 1;
  }
}

